# System_integration

./: .gitignore  README.md  System_integration.sln  pyproject.toml  run_csharp_server.bat  run_server.py
01_Text-based_Data_Formats/: me.txt  paymentiframe.html
01_Text-based_Data_Formats/01a_Data_Parsing/00_Data_Parsing_Part2/python/: me.csv  me.xml  me.yaml  server.py
01_Text-based_Data_Formats/01a_Data_Parsing/csharp/DataParsing/: DataParsing.csproj  ParseFiles.cs  meC.csv  meC.txt  meC.xml  meC.yaml
01_Text-based_Data_Formats/01a_Data_Parsing/python/: me.json  me.txt  parse_files.py  pyproject.toml  server.py
02_Modules/Python_Modules/my_module/: file_one.py  file_two.py
02_Modules/htmlclassic/: index.html  myModule.js
03_encode_decode/csharp/EncodingDecodingExample/: EncodingDecodingExample.cs
04_TCP_UDP/TCP/: client.py  pyproject.toml  server.py
04_TCP_UDP/UDP/: client.py  server.py
05_date/csharp/DateTimeExample/: DateTimeExample.cs
05_date/python/: pyproject.toml
06_short_polling/: main.py  pyproject.toml
07_long_polling/: main.py  pyproject.toml
08_server-sent_events/Csharp/Properties/: launchSettings.json
08_server-sent_events/Csharp/wwwroot/: index.html
08_server-sent_events/ServerSentEvents/: Program.cs
08_server-sent_events/ServerSentEvents/controllers/: SseController.cs
08_server-sent_events/python/: main.py  pyproject.toml
08_server-sent_events/python/public/: index.html
09_WebSocket/Csharp/: Program.cs
09_WebSocket/Csharp/wwwroot/: index.html
09_WebSocket/python_FastAPI/: pyproject.toml
09_WebSocket/python_plain/: pyproject.toml
10_OpenAPI/python/: pyproject.toml
10_OpenAPI/python/routers/: spacecrafts_router.py
12_CORS/python/: main.py  pyproject.toml
12_database_migratrion/python_alembic/: alembic.ini  pyproject.toml
14_Multipart_Forms/python/: main.py  pyproject.toml
(+6 files in other folders)
